# GroundMotion.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  release_bin.yml
ground-motion-bin/: Cargo.toml
ground-motion-bin/src/: cmd_args.rs  main.rs
ground-motion-lib/: Cargo.toml  README.md
ground-motion-lib/src/: auxilary.rs  configs.rs  gmm.rs  lib.rs  mf2013.rs  readers.rs  vectorized.rs  writers.rs
ground-motion-lib/tests/: test_mf2013.rs  test_readers.rs
ground-motion-lib/tests/data/: testvs30.txt  testvs30dl.txt
